# django-flowbite-admin

./: MANIFEST.in  README.md  package-lock.json  package.json  setup.cfg  tailwind.config.js
.github/workflows/: tests.yml
flowbite_admin/: __init__.py  apps.py  changelists.py  forms.py  sites.py  views.py
flowbite_admin/forms/: __init__.py  widgets.py
flowbite_admin/static/flowbite_admin/css/: flowbite-admin.css
flowbite_admin/static/flowbite_admin/js/: chart.umd.min.js  dashboard.js  flowbite-admin.js  flowbite.min.js
flowbite_admin/templates/admin/: base_site.html  change_form.html  change_list.html  change_list_results.html  delete_confirmation.html  index.html  login.html  search_form.html  user_settings.html
flowbite_admin/templates/admin/auth/group/: change_form.html  change_list.html
flowbite_admin/templates/admin/auth/user/: change_form.html
flowbite_admin/templates/admin/includes/: fieldset.html  fieldset_line.html
flowbite_admin/templatetags/: changelist_helpers.py  form_helpers.py
tests/: admin.py  apps.py  models.py  settings.py  test_admin_flowbite.py  urls.py
tools/: build-css.js
