[metadata]
name = django-flowbite-admin
version = 0.3.0
description = A modern Django admin interface styled with Flowbite + TailwindCSS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/django-flowbite-admin
author = Your Name
author_email = you@example.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >=3.9
install_requires =
    Django>=5.0,<6.0

[options.packages.find]
include = flowbite_admin*
